--- a/apps/mysite-frontend/src/index.html
+++ b/apps/mysite-frontend/src/index.html
@@ -13,6 +13,18 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
+
+  <script>
+    (() => {
+      try {
+        const theme = localStorage.getItem('theme') || 'tageslicht';
+        document.documentElement.dataset['theme'] = theme;
+      } catch (e) {
+        console.error('Error applying theme from localStorage', e);
+        document.documentElement.dataset['theme'] = 'tageslicht';
+      }
+    })();
+  </script>
 </head>
 
 <body>
