--- a/apps/mysite-frontend/src/index.html
+++ b/apps/mysite-frontend/src/index.html
@@ -29,6 +29,10 @@
 
 <body>
   <mysite-root></mysite-root>
+  <script type="module">
+    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+    mermaid.initialize({ startOnLoad: true, theme: 'dark' });
+  </script>
 </body>
 
 </html>
