adjust md bg and tags

--- a/apps/mysite-frontend/src/index.html
+++ b/apps/mysite-frontend/src/index.html
@@ -15,7 +15,7 @@
   <link rel="manifest" href="/site.webmanifest">
 
   <!-- Highlight.js for syntax highlighting -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css"> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 
   <script>
